2003-04-08  Alexandre Oliva  <aoliva@redhat.com>

	* elf32-mips.c (bfd_elf32_bfd_reloc_type_lookup): Detect (ctor)
	pointer size from ABI, not arch_bits_per_address.

2003-04-07  Kevin Buettner  <kevinb@redhat.com>

	* elfn32-mips.c (elf32_mips_grok_prstatus): Adjust core file related
	constants for n32 ABI.

2003-04-06  Andrew Cagney  <cagney@redhat.com>

	* simple.c (bfd_simple_get_relocated_section_contents): Disable
	free that leads to GDB vs BFD memory corruption.

2003-04-04  Stephane Carrez  <stcarrez@nerim.fr>

	* elf32-m68hc11.c (m68hc11_elf_relax_delete_bytes): Also adjust
	symbols that mark the end of the section.
	(m68hc11_elf_relax_section): Use R_M68HC11_PCREL_8 relocs when
	converting to a relative branch so that the offset is computed after
	the relaxation; also relocate a jsr into a bsr if possible but don't
	relax them if they are to a far symbol as we need to call the
	trampoline code.
	(elf_m68hc11_howto_table): Set pcrel_offset to true.

2003-04-04  Svein E. Seldal  <Svein.Seldal@solidas.com>

	* archures.c: Namespace cleanup. Rename bfd_mach_c3x to
	bfd_mach_tic3x and bfd_mach_c4x to bfd_mach_tic4x
	* bfd-in2.h: Regenerate
	* coff-tic4x.c: Namespace cleanup. Replace s/c4x/tic4x/
	* cpu-tic4x.c: Ditto

2003-04-03  Nick Clifton  <nickc@redhat.com>

	* peXXigen.c (_bfd_XXi_swap_scnhdr_out): Compute ps and ss
	differently for object files and executables.
	* peicode.h (coff_swap_scnhdr_in): Only set the s_size field
	for object files or for executables who have not already
	initialised the field.
	* libpei.h (bfd_pe_executable_p): New macro.  Return true if
	the PE format bfd is an executable.

2003-04-03  Alan Modra  <amodra@bigpond.net.au>

	* elf32-ppc.c (ppc_elf_check_relocs): Don't use SYMBOL_REFERENCES_LOCAL
	here as it's too early to reliably determine locality.
	(ppc_elf_gc_sweep_hook): Likewise.
	(SYMBOL_REFERENCES_LOCAL): Expand comment.

2003-04-02  Bob Wilson  <bob.wilson@acm.org>
